nambah tugas4 lagi tekan tempat lahir

--- a/tugas3.html
+++ b/tugas3.html
@@ -41,68 +41,104 @@
                 <b>Tracing Alumni</b>
                 <hr>
                 <table>
-                    <form>
-                        <tr>
-                            <td>NIM</td>
-                            <td><input type="text" name="nim" size="40" maxlength="15" autofocus=""></td>
-                        </tr>
-                        <tr>
-                            <td>Nama Lengkap</td>
-                            <td><input type="text" name="nama" size="40" maxlength="40"></td>
-                        </tr>
-                        <tr>
-                            <td>Alamat Sesuai KTP</td>
-                            <td><textarea rows="5" cols="40"></textarea></td>
-                        </tr>
-                        <tr>
-                            <td>Alamat saat ini</td>
-                            <td><textarea rows="5" cols="40"></textarea></td>
-                        </tr>
-                        <tr>
-                            <td>No. HP / Telp</td>
-                            <td><input type="text" name="hp" size="40" maxlength="20"></td>
-                        </tr>
-                        <tr>
-                            <td>Email</td>
-                            <td><input type="text" name="email" size="40" maxlength="20"></td>
-                        </tr>
-                        <tr>
-                            <td>Kompetensi Keilmuan</td>
-                            <td><input type="text" name="keilmuan" size="40" maxlength="20"></td>
-                        </tr>
-                        <tr>
-                            <td>Tahun Lulus(Wisuda)</td>
-                            <td><input type="text" name="tahunlulus" size="40" maxlength="5"></td>
-                        </tr>
-                        <tr>
-                            <td><b>Pekerjaan Pertama Setelah Lulus</b></td>
-                        </tr>
-                        <tr>
-                            <td>a. Nama Perusahaan</td>
-                            <td><input type="text" name="nama perusahaan" size="40" maxlength="40"></td>
-                        </tr>
-                        <tr>
-                            <td>b. Alamat</td>
-                            <td><textarea rows="5" cols="40"></textarea></td>
-                        </tr>
-                        <tr>
-                            <td>c. Telp./Fax</td>
-                            <td><input type="text" name="telp" size="40" maxlength="15"></td>
-                        </tr>
-                        <tr>
-                            <td>d. Email</td>
-                            <td><input type="text" name="email" size="40" maxlength="30"></td>
-                        </tr>
-                        <tr>
-                            <td>e. Posisi</td>
-                            <td><input type="text" name="pos" size="40" maxlength="30"></td>
-                        </tr>
-                        <tr>
-                            <td>f. Mulai bekerja Tahun</td>
-                            <td><input type="text" name="mulai" size="40" maxlength="5"></td>
-                        </tr>
-                    </form>
+                    <tr>
+                        <td>NIM</td>
+                        <td><input type="text" name="nim" size="40" maxlength="15" autofocus=""></td>
+                    </tr>
+                    <tr>
+                        <td>Nama Lengkap</td>
+                        <td><input type="text" name="nama" size="40" maxlength="40"></td>
+                    </tr>
+                    <tr>
+                        <td>Alamat Sesuai KTP</td>
+                        <td><textarea rows="5" cols="40"></textarea></td>
+                    </tr>
+                    <tr>
+                        <td>Alamat saat ini</td>
+                        <td><textarea rows="5" cols="40"></textarea></td>
+                    </tr>
+                    <tr>
+                        <td>No. HP / Telp</td>
+                        <td><input type="text" name="hp" size="40" maxlength="20"></td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td><input type="text" name="email" size="40" maxlength="20"></td>
+                    </tr>
+                    <tr>
+                        <td>Kompetensi Keilmuan</td>
+                        <td><input type="text" name="keilmuan" size="40" maxlength="20"></td>
+                    </tr>
+                    <tr>
+                        <td>Tahun Lulus(Wisuda)</td>
+                        <td><input type="text" name="tahunlulus" size="40" maxlength="5"></td>
+                    </tr>
+                    <tr>
+                        <td><b>Pekerjaan Pertama Setelah Lulus</b></td>
+                    </tr>
+                    <tr>
+                        <td>a. Nama Perusahaan</td>
+                        <td><input type="text" name="nama perusahaan" size="40" maxlength="40"></td>
+                    </tr>
+                    <tr>
+                        <td>b. Alamat</td>
+                        <td><textarea rows="5" cols="40"></textarea></td>
+                    </tr>
+                    <tr>
+                        <td>c. Telp./Fax</td>
+                        <td><input type="text" name="telp" size="40" maxlength="15"></td>
+                    </tr>
+                    <tr>
+                        <td>d. Email</td>
+                        <td><input type="text" name="email" size="40" maxlength="30"></td>
+                    </tr>
+                    <tr>
+                        <td>e. Posisi</td>
+                        <td><input type="text" name="pos" size="40" maxlength="30"></td>
+                    </tr>
+                    <tr>
+                        <td>f. Mulai bekerja Tahun</td>
+                        <td><input type="text" name="mulai" size="40" maxlength="5"></td>
+                    </tr>
+                    <tr>
+                        <td><b>Pekerjaan Saat Ini</b></td>
+                    </tr>
+                    <tr>
+                        <td>a. Nama Perusahaan</td>
+                        <td><input type="text" name="nama perusahaan ini" size="40" maxlength="40"></td>
+                    </tr>
+                    <tr>
+                        <td>b. Alamat</td>
+                        <td><textarea rows="5" cols="40"></textarea></td>
+                    </tr>
+                    <tr>
+                        <td>c. Telp./Fax</td>
+                        <td><input type="text" name="telpini" size="40" maxlength="15"></td>
+                    </tr>
+                    <tr>
+                        <td>d. Email</td>
+                        <td><input type="text" name="emailini" size="40" maxlength="30"></td>
+                    </tr>
+                    <tr>
+                        <td>e. Posisi</td>
+                        <td><input type="text" name="posini" size="40" maxlength="30"></td>
+                    </tr>
+                    <td><b>Berwirausaha</b></td>
+                    </tr>
+                    <tr>
+                        <td>a. Jenis Usaha</td>
+                        <td><input type="text" name="jenis usaha" size="40" maxlength="40"></td>
+                    </tr>
+                    <tr>
+                        <td>b. Alamat</td>
+                        <td><textarea rows="5" cols="40"></textarea></td>
+                    </tr>
                 </table>
+                <form style="border:1px solid black;text-align:center;">
+                    <input type="checkbox" name="konfirmasi">
+                    data di atas diisi dengan sebenar-benarnya
+                </form>
+                * diisi bagi yang berwirausaha
             </td>
         </tr>
     </table>
